fixed swagger doc issue in logout
